# planning-corridor_planner

./: .gitignore  CMakeLists.txt  Doxyfile.in  corridor_planner.pc.in  manifest.xml  nav.pc.in
cmake/: FindGDAL.cmake  FindSISL.cmake
nav/: CMakeLists.txt  dstar.cc  dstar.hh  merge.cc  merge.hh  plan.cc  plan.hh  point.cc  point.hh  pool_allocator.hh  skeleton.cc  skeleton.hh  voronoi.cc  voronoi.hh
paper/: run-small.sh  run.sh  terrain-blocked.tif  terrain.tif  terrain_classes.txt
resources/dfki_test_track/: .gitignore  run-detail.sh  run-small.sh  run.sh  terrain-detail.tif  terrain-small.tif  terrain_classes.txt
resources/dfki_test_track_dem/: run.sh  terrain_classes.txt
resources/dfki_test_track_dem.bak/: envire::Grid_105.tiff
ruby/: CMakeLists.txt  corridor_plan.rb
scripts/nav/: plot.rb  progress_plot.rb  results.rb
src/: CMakeLists.txt  NURBSCurve3D.cc  NURBSCurve3D.hh  annotations.cc  annotations.hh  corridor_planner.cc  corridor_planner.hh  corridor_planner.pc.in  corridors.hh  dstar.cc  dstar.hh  geometry.hh  grid_graph.cc  grid_graph.hh  grid_map.hh  main.cc  make_band_from_classes.cc  make_traversability.cc  merge.cc  merge.hh  nav.cc  plan.cc  plan.hh  point.hh  pool_allocator.hh  skeleton.cc  skeleton.hh  terrain_classes.cc  terrain_classes.hh  traversability_classifier.cc  traversability_classifier.hh  traversability_map.cc  traversability_map.hh  voronoi.cc  voronoi.hh
test/: CMakeLists.txt  test_corridors.cc  test_dstar.cc  test_dstar_multipath.cc  test_merge.cc  test_skeleton.cc  testsuite.cc
test/data/: empty-small.tif  empty.tif  ndd.tif
tools/: CMakeLists.txt  env_augment_mls.cpp
vis/: CMakeLists.txt  CorridorPlanVisualisation.cpp  CorridorPlanVisualisation.h  corridor_planner_vis.pc.in
viz/: CMakeLists.txt  CorridorPlanVisualization.cpp  CorridorPlanVisualization.hpp  corridor_plan_view.rb  corridor_plan_view.ui  corridor_planner-viz.pc.in  vizkit_plugin.rb
