FIND_PACKAGE(GDAL)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GDAL_CFLAGS}")

ADD_LIBRARY(Nav SHARED dstar.cc skeleton.cc)
TARGET_LINK_LIBRARIES(Nav ${GDAL_LIBRARIES})
TARGET_LINK_LIBRARIES(Nav /usr/lib/libcv.so)

INSTALL(TARGETS Nav
    LIBRARY DESTINATION lib)
INSTALL(FILES dstar.hh DESTINATION include/nav)

